--- a/config/storage.yml
+++ b/config/storage.yml
@@ -14,6 +14,14 @@ local:
 #   region: us-east-1
 #   bucket: your_own_bucket
 
+ digitalocean:
+   service: spaces
+   access_key_id: <%= Rails.application.credentials.dig(:do, :access_key_id) %>
+   secret_access_key: <%= Rails.application.credentials.dig(:do, :secret_access_key) %>
+   region: <%= Rails.application.credentials.dig(:do, :region) %>
+   bucket: <%= Rails.application.credentials.dig(:do, :bucket) %>
+   endpoint: <%= Rails.application.credentials.dig(:do, :endpoint) %>
+
 # Remember not to checkin your GCS keyfile to a repository
 # google:
 #   service: GCS
